# Dynamics-and-Control

./: .gitignore  .readthedocs.yaml  .testignore  .travis.yml  Aliasing.ipynb  Approximation.ipynb  Approximation.v3.ipynb  Asymptotic Bode diagrams.ipynb  Block diagram simplification.ipynb  Block diagram simplification.v3.ipynb  CITATION.cff  Control valve design.ipynb  Control valve design.v3.ipynb  Convolution.ipynb  Convolution.v3.ipynb  Dahlin controller.ipynb  Dahlin controller.v3.ipynb  Direct synthesis PID design.ipynb  Direct synthesis PID design.v3.ipynb  Discrete control.ipynb  Discrete control.v3.ipynb  Dynamic model parameter estimation.ipynb  Effect of Proportional Control.ipynb  Effect of Proportional Control.v3.ipynb  Equation solving tools.ipynb  Equation solving tools.v3.ipynb  First order systems.ipynb  First order systems.v3.ipynb  Fourier series.ipynb  Fourier series.v3.ipynb  Frequency domain stability.ipynb  Frequency domain stability.v3.ipynb  Frequency response plots.ipynb  Function index.ipynb  Hybrid system simulation.ipynb  Hybrid system simulation.v3.ipynb  Identifying discrete-time models.ipynb  Laplace transforms.ipynb  Laplace transforms.v3.ipynb  Linearisation.ipynb  (+60 more)
.github/workflows/: global-ci.yml  test.yml
0_Getting_Started/: Cheatsheet.ipynb  Extra Python.ipynb  Notebook introduction.ipynb
1_Dynamics/1_Modelling/: Draining cup.ipynb  Equation solving tools.ipynb
1_Dynamics/2_Time_domain_simulation/: Fed batch bioreactor.ipynb  Mixing system.ipynb  Nonlinear CSTR.ipynb  Numeric representation.ipynb  Read input from file.ipynb
1_Dynamics/3_Linear_systems/: Convolution.ipynb  Laplace transforms.ipynb  Linearisation.ipynb  Visualising complex functions.ipynb
1_Dynamics/4_First_and_second_order_system_dynamics/: First order systems.ipynb  Second order systems.ipynb  Sinusoidal response.ipynb  Standard process inputs.ipynb
Modelica/: Discrete.mo  FedBatchBioreactorModel.mo  MixingSystem.mo
Simulation/: Blocksim.ipynb  Classes.ipynb  Hybrid system simulation.ipynb  Object-Oriented simulation - Discrete.ipynb  Object-Oriented simulation.ipynb  Special functions in classes.ipynb  Timing study.ipynb
assets/: continuous_controller.ipe  data.csv  example_6_1.xlsx  tankdata.xlsx  tanksystem.ipe
lib/: blocksim.py  fopdtitae.py
tbcontrol/: __init__.py  blocksim.py  controllers.py  conversion.py  fopdtitae.py  loops.py  numeric.py  plotting.py  responses.py  symbolic.py  version.py
tclab/: Continuous PID on TCLab.ipynb  FOPDT fit.ipynb  Frequency domain.ipynb  TCLab PID.ipynb  TCLab step test.ipynb  pidgui.py
tests/: test_numeric.py
(+43 files in other folders)
